@@ -46,6 +46,7 @@ version <next>:
 - mips64r6 option has been removed
 - DXVA2-accelerated VP9 decoding
 - SOFAlizer: virtual binaural acoustics filter
+- VAAPI VP9 hwaccel
 
 
 version 2.8:
